5.0a1 -> 5.0a2:
    - rse: fix building against external Berkeley-DB under Solaris (where -lrt is required)
    - rse: fix distribution tarball by adding the missing misc/librpmmisc.vers
    - jbj: hmmm, tagno's 261 and 269 are fishy, skip tagTypeValidate for now.
    - jbj: add tagTypeValidate sanity check before flipping to implicit typing.
    - jbj: fix: "RPMTAG_FILESTATES has RPM_CHAR_TYPE=1 instead of 2".
    - jbj: eliminate headerGetLangs, query RPMTAG_HEADERI18NTABLE instead.
    - jbj: eliminate headerGetRawEntry(), noone can possibly need.
    - jbj: eliminate headerDump, query with --xml or --yaml instead.
    - jbj: hmmm RPMTAG_FILESTATES has RPM_CHAR_TYPE=1 instead of 2. todo++;
    - jbj: eliminate RPM_CHAR_TYPE, use RPM_UINT8_TYPE instead.
    - jbj: eliminate RPM_NULL_TYPE, use 0 instead.

4.5 -> 5.0a1:
    - rse: start providing a high-level NEWS document for RPM 5
    - rse: first cut for properly integrate XAR support into the build environment
    - rse: allow RPM to be built without XAR support again
    - jbj: functional header-only signature verify of *.xar.
    - jbj: add --rpmwfdebug.
    - jbj: clean up rpmpkg memory leaks.
    - jbj: functional queries of *.xar packages, on to payload.
    - jbj: lash up rpmwf implicit iteration for Lead/Signature/Header reads.
    - jbj: add rpmwf getter/setter to FD_t for now.
    - jbj: add --xar to read *.xar for now, magic later.
    - jbj: txar.c: use rpmwfFoo from -lrpmdb.
    - jbj: hotwire -lxar linkage for the moment.
    - jbj: add proof-of-concept rpmwf "wrapper format" to rpmdb.
    - jbj: move rpmReadHeader from lib/package.c to rpmdb/pkgio.c.
    - jbj: remove HGE_t casts everywhere.
    - jbj: hmmm, rpm-perl seems to have issues on BIGENDIAN non-int32 retrieves.
    - jbj: use HE_t instead of individual args. dunno HGE_t et al desired ...
    - jbj: eek, rpm-perl not being built here.
    - rpm.org: Change strntoul to using size_t for sizes.
    - rpm.org: Remove refs to "file/src".